static/css/exploreTaxonomy.css
.list:not(.ui) {
    padding-top: 0 !important;
    margin-top: 10px !important;
}

.ui.list .icon {
    z-index: 2;
}

.item {
    position: relative;
    padding-left: 20px !important;
}

.item.expanded .item::after {
    content: '';
    position: absolute;
    top: 16px;
    left: -24px;
    width: 35px;
    border-top: #dedede solid 2px;
    visibility: visible;
    z-index: -1;
}

.item.expanded .item.expanded::after {
    border-top: #db2828 solid 4px;
}

.ui.list > .item {
    margin: 20px 0 !important;
}

.ui.list > .item .item:last-child::before {
    content: '';
    position: absolute;
    width: 4px;
    background: white;
    top: 18px;
    bottom: -4px;
    left: -24px;
}

.ui.list > .item .item.expanded:last-child::before {
    top: 20px;
}

.ui.list > .item > .content > .header {
    font-size: 1.8rem;
}

.ui.list > .item > .content > .list > .item > .content > .title {
    font-size: 1.2rem;
}

.item > .content {
    padding: 0 !important;
    margin-left: 10px;
}

.item:not(.open) > .content > .header,
.item:not(.open) > .content > .title {
    cursor: pointer;
}

.item.expanded > .content > .header,
.item.expanded > .content > .title {
    color: #db2828 !important;
    opacity: 1;
    -webkit-transition: all 0.1s;
    -moz-transition: all 0.1s;
    -ms-transition: all 0.1s;
    -o-transition: all 0.1s;
    transition: all 0.1s;
}

.item:not(.open) > .content > .header:hover,
.item:not(.open) > .content > .title:hover {
    opacity: 0.8;
    -webkit-transition: all 0.1s;
    -moz-transition: all 0.1s;
    -ms-transition: all 0.1s;
    -o-transition: all 0.1s;
    transition: all 0.1s;
}

.item > .content > .header > .button,
.item > .content > .title > .button {
    font-size: 12px;
    padding: 5px;
    margin-left: 8px;
    vertical-align: middle;
    opacity: 0;
    -webkit-transition: all 0.1s;
    -moz-transition: all 0.1s;
    -ms-transition: all 0.1s;
    -o-transition: all 0.1s;
    transition: all 0.1s;
}

.item > .content > .header:hover > .button,
.item > .content > .title:hover > .button {
    opacity: 1;
    -webkit-transition: all 0.1s;
    -moz-transition: all 0.1s;
    -ms-transition: all 0.1s;
    -o-transition: all 0.1s;
    transition: all 0.1s;
}

.item.expanded .item:not(.open) {
    padding: 8px 10px !important;
}

.item.expanded .list {
    border-left: #db2828 solid 4px;
    margin-top: 0px !important;
    margin-left: -23px !important;
    padding-top: 5px !important;
    padding-left: 20px !important;
}

.ui.list .item > .icon {
    font-size: 14px;
    display: table-cell !important;
    color: #666666;
    padding-right: 8px !important;
}

.item.last > .icon {
    padding-right: 14px !important;
    padding-left: 7px;
    cursor: default;
}

.item:not(.last) > .icon {
    cursor: pointer;
}

.item.open > .icon {
    padding-top: 6px !important;
}

.item.expanded:not(.open) > .icon::before {
    background-color: #db2828 !important;
    color: white;
}

.ui.list .item:not(.last) > .icon::before {
    padding: 5px;
    border: solid 1px transparent;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
}

.ui.list .item:not(.expanded) > .icon.sitemap:hover::before {
    border: solid 1px #dedede;
}

.item.expanded > .icon:hover::before {
    background-color: #b42121 !important;
}

.item.open > .content > .icon {
    position: relative;
    left: -26px;
    top: -23px;
    font-size: 14px;
}

.item.open > .content > .list {
    margin-top: -25px !important;
}

.item.open .ui.card {
    width: auto;
    margin-left: -35px;
    margin-bottom: 0;
    padding-left: 20px;
    z-index: 0;
}

.item.open.expanded > .content > .icon {
    color: #db2828;
}

.item .open .container {
    margin-left: 0 !important;
}

.item .open .button {
    font-size: 12px;
    padding: 5px;
}

.item.open .header {
    font-size: 24px;
    margin: 10px auto !important;
}

.item.open .description {
    margin-bottom: 10px;
}

.item.open .player_container {
    margin-top: 10px;
    margin-right: 10px;
}

